<?xml version="1.0" encoding="utf-8"?>

<!-- Review Markup For This Page [√√√√] -->

<!-- Use android:keepScreenOn To Keep The Screen From Timing Out (Source: https://stackoverflow.com/a/27744484/16118981) -->

<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/mtTimeBetweenCheckIns"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <Spinner
            android:background="#F5F5F5"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:id="@+id/mxCountdownFrom"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <Button
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxContact0"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/mtContact0"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <Button
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxContact1"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/mtContact1"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <Button
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxContact2"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/mtContact2"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <Button
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxBackButton"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:text="@string/mtStart"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <TextView
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:gravity="top|start"
            android:id="@+id/mxStatusWindow"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:text=""
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <!-- "top|start" instead "top|left" due to this suggestion: Use "start" instead of "left" to ensure correct behavior in right-to-left locales. -->
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:alpha="0.9"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxRestartActivity"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/mtRestartActivity"
            android:textSize="45dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display2"
            android:visibility="gone"
            tools:ignore="SpUsage" />
    </LinearLayout>
</FrameLayout>

