<?xml version="1.0" encoding="utf-8"?>

<!-- Review Markup For This Page [√√√√] -->

<!-- Use android:keepScreenOn To Keep The Screen From Timing Out (Source: https://stackoverflow.com/a/27744484/16118981) -->

<FrameLayout
    android:keepScreenOn="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <Button
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxBackButton"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/mtBack"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
        <androidx.recyclerview.widget.RecyclerView
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxRecyclerView"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:alpha="0.9"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxMessageNotice"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/mtShortCodeNoticeAbridgedHtml"
            android:textAppearance="@android:style/TextAppearance.Material.Display2"
            android:visibility="gone" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:alpha="0.9"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxRestartActivity"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/mtRestartActivity"
            android:textAppearance="@android:style/TextAppearance.Material.Display2"
            android:visibility="gone" />
    </LinearLayout>
</FrameLayout>
