<?xml version="1.0" encoding="utf-8"?>

<!-- Review Markup For This Page [√√√√] -->

<!-- Use android:keepScreenOn To Keep The Screen From Timing Out (Source: https://stackoverflow.com/a/27744484/16118981) -->

<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    android:keepScreenOn="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <Button
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxSettingsButton"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/mtSettings"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            tools:ignore="SpUsage" />
        <Button
            android:background="#FFFF00"
            android:fontFamily="sans-serif-black"
            android:id="@+id/mxPleaseCheckInButton"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:text="@string/mtPleaseCheckIn"
            android:textSize="45dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display2"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <!-- Below: We Add A Functionless Spacer Button FIRST So The TextViews Will Align Relative To The "mxPleaseCheckInButton" -->
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <Button
            android:clickable="false"
            android:fontFamily="sans-serif-light"
            android:id="@+id/mxSpacerButton"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:text="@string/mtSettings"
            android:textSize="22dp"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:visibility="invisible"
            tools:ignore="SpUsage" />
        <TextView
            android:background="@drawable/mi_gradient_top"
            android:clickable="false"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxPseudoToastBlock0"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:maxLines="4"
            android:shadowColor="#80444444"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:textSize="34dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="#EEEEEE"
            android:visibility="invisible"
            tools:ignore="SpUsage" />
        <TextView
            android:background="@drawable/mi_gradient_middle"
            android:clickable="false"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxPseudoToastBlock1"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:maxLines="4"
            android:shadowColor="#80444444"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:textSize="34dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="#EEEEEE"
            android:visibility="invisible"
            tools:ignore="SpUsage" />
        <TextView
            android:background="@drawable/mi_gradient_bottom"
            android:clickable="false"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxPseudoToastBlock2"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:maxLines="4"
            android:shadowColor="#80444444"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="5"
            android:textSize="34dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display1"
            android:textColor="#EEEEEE"
            android:visibility="invisible"
            tools:ignore="SpUsage" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:alpha="0.9"
            android:background="#FFFFFF"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:id="@+id/mxLowVolume"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/mtLowVolume"
            android:textSize="45dp"
            android:textAppearance="@android:style/TextAppearance.Material.Display2"
            android:visibility="gone"
            tools:ignore="SpUsage" />
    </LinearLayout>
</FrameLayout>



